# django-referral-system

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
docs/: conf.py  getting_started.rst  index.rst  installation.rst  promoter.rst  referral.rst  referral_service.rst  requirements.txt  wise_payouts.rst
referrals/: admin.py  apps.py  choices.py  config.py  enums.py  exceptions.py  helpers.py  models.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
referrals/dtos/: base_dto.py  promoters_dtos.py
referrals/management/commands/: create_referral_program.py
referrals/migrations/: 0001_initial.py  0002_alter_payoutmethod_method_and_more.py
referrals/repositories/: __init__.py  base_repository.py  promoter_commission_repository.py  promoter_payout_repository.py  promoter_repository.py  referral_repository.py
referrals/services/: __init__.py  promoter_payout_service.py  promoter_service.py  referral_service.py
test_app/: db.sqlite3
test_app/test_app/: asgi.py  requirements.txt  settings.py  urls.py  wsgi.py
